
package mysql;

message tb_center_cycle_role{
    required uint32 role_id = 1;
    required uint32 helped_count = 2;
    required uint32 timestamp = 3;
    required bytes passed_levels = 4;
}
